# DevEnvCPP

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
app/: main.cpp
scripts/init/.vscode-server/data/Machine/: settings.json
